Windows 2000 support was added

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -34,8 +34,8 @@
           <li><a href="#mozTocId225176">Chapter 2. Graphic primitives</a></li>
           <li><a href="#mozTocId289525">Chapter 3. Picture subsystem</a></li>
           <li><a href="#mozTocId501089">Chapter 4. Animation subsystem</a></li>
-          <li><a href="#mozTocId455894"> Chapter 5. Background</a></li>
-          <li><a href="#mozTocId662651"> Chapter 6. Sprites</a></li>
+          <li><a href="#mozTocId455894">Chapter 5. Background</a></li>
+          <li><a href="#mozTocId662651">Chapter 6. Sprites</a></li>
           <li><a href="#mozTocId367464">Chapter 7. Text</a></li>
           <li><a href="#mozTocId146800">Chapter 8. Tile-set</a></li>
           <li><a href="#mozTocId67980">Chapter 9. Loading images</a></li>
@@ -43,19 +43,20 @@
       </li>
       <li><a href="#mozTocId64443">Part 4. Common things</a>
         <ul>
-          <li><a href="#mozTocId236677">Chapter 1. Interaction with operation
+          <li><a href="#mozTocId278869">Chapter 1. Multimedia</a></li>
+          <li><a href="#mozTocId236677">Chapter 2. Interaction with operation
               system</a></li>
-          <li><a href="#mozTocId688163">Chapter 2. Filesystem</a></li>
-          <li><a href="#mozTocId853711">Chapter 3. Abnormal program termination</a></li>
-          <li><a href="#mozTocId656377">Chapter 4. Timer</a></li>
+          <li><a href="#mozTocId688163">Chapter 3. Filesystem</a></li>
+          <li><a href="#mozTocId853711">Chapter 4. Abnormal program termination</a></li>
+          <li><a href="#mozTocId656377">Chapter 5. Timer</a></li>
           <li><a href="#mozTocId381935">Chapter 5. Collision</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId590919"> Part 5. Binary files</a>
+      <li><a href="#mozTocId590919">Part 5. Binary files</a>
         <ul>
-          <li><a href="#mozTocId961921"> Chapter 1. Base binary files subsystem</a></li>
-          <li><a href="#mozTocId424835"> Chapter 2. File reader</a></li>
-          <li><a href="#mozTocId511135"> Chapter 3. File writer</a></li>
+          <li><a href="#mozTocId961921">Chapter 1. Base binary files subsystem</a></li>
+          <li><a href="#mozTocId424835">Chapter 2. File reader</a></li>
+          <li><a href="#mozTocId511135">Chapter 3. File writer</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId291572">Part 6. Input</a>
@@ -63,12 +64,6 @@
           <li><a href="#mozTocId685403">Chapter 1. Keyboard</a></li>
           <li><a href="#mozTocId686993">Chapter 2. Mouse</a></li>
           <li><a href="#mozTocId861609">Chapter 3. Game-pad</a></li>
-        </ul>
-      </li>
-      <li><a href="#mozTocId897139">Part 7. Other important things</a>
-        <ul>
-          <li><a href="#mozTocId585261">Chapter 1. Memory</a></li>
-          <li><a href="#mozTocId903881">Chapter 2. Multimedia</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId309127">Part 8. Internal details of the engine
@@ -206,11 +201,11 @@
       <tbody>
         <tr>
           <td style="vertical-align: top;"><big>Operation system </big></td>
-          <td style="vertical-align: top;"><big>Windows XP or higher </big></td>
+          <td style="vertical-align: top;"><big>Windows 2000 or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>Additional software </big></td>
-          <td style="vertical-align: top;"><big>DirectX 8.1 or higher </big></td>
+          <td style="vertical-align: top;"><big>DirectX 7.0 or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>System type </big></td>
@@ -232,8 +227,8 @@
         <tr>
           <td colspan="1" rowspan="2" style="vertical-align: top;"><big>Processor
               </big></td>
-          <td style="vertical-align: top;"><big>Intel Pentium 4 for 32 bit
-              system </big></td>
+          <td style="vertical-align: top;"><big>Intel Pentium III 1200 mhz for
+              32 bit system </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>Intel Core 2 Duo for 64 bit
@@ -256,6 +251,7 @@ C++
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW-w64</big></a></li>
+      <li><big>Visual C++ 2005</big></li>
       <li><big>Visual C++ 2008</big></li>
       <li><big>Visual C++ 2010</big></li>
       <li><big>Visual C++ 2012</big></li>
@@ -264,9 +260,16 @@ C++
       <li><big>Visual C++ 2017</big></li>
       <li><big>Visual C++ 2019</big></li>
     </ul>
-    <big><span style="text-decoration: underline;">Windows XP support</span><br>
+    <big><span style="text-decoration: underline;">Windows 2000 support</span><br>
       <br>
-      You need Visual C++ 2008, MINGW-w64 or TDM-GCC for Windows XP support.<br>
+      You need <a href="http://download.microsoft.com/download/A/9/1/A91D6B2B-A798-47DF-9C7E-A97854B7DD18/VC.iso">Visual
+        C++ 2005 Express</a> and <a href="https://www.microsoft.com/en-us/download/details.aspx?id=15656">Windows
+        Server 2003 SP1 Platform SDK</a> for Windows 2000 support.<br>
+      <br>
+      <span style="text-decoration: underline;">Windows XP support</span><br>
+      <br>
+      &nbsp;You need Visual C++ 2008, MINGW-w64 or TDM-GCC for Windows XP
+      support.<br>
       <br>
       <span style="text-decoration: underline;">Compiler optimization</span><br>
       <br>
@@ -789,8 +792,75 @@ C++
       correct format. I recommend use <a href="https://www.gimp.org">GIMP</a>
       for do it. It is powerful open source and cross-platform image editor. </big>
     <h1><a class="mozTocH1" name="mozTocId64443"></a><big>Part 4. Common things</big></h1>
+    <h2><a id="mozTocId278869" class="mozTocH2"></a><big>Chapter 1. Multimedia</big></h2>
+    <big><br>
+      <span style="text-decoration: underline;">Improve you game</span><br>
+      <br>
+      What is good things for a video games? A sounds and video. The sound can
+      improve game atmosphere. The video is very useful as splash between game
+      levels. It can use for show game story.<br>
+      <br>
+      <span style="text-decoration: underline;">Supported formats</span><br>
+      <br>
+    </big>
+    <p><big> You can see list of supported formats bellow.</big></p>
+    <big><br>
+    </big>
+    <table style="text-align: left; width: 315px; height: 214px;" cellspacing="2"
+      cellpadding="2" border="1">
+      <tbody>
+        <tr>
+          <td style="vertical-align: top;"><big>Format </big></td>
+          <td style="vertical-align: top;"><big>Type </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>WAVE </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG Audio Layer 3 </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>Windows Media Audio </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG–1 </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG–2 </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>Windows Media Video </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+      </tbody>
+    </table>
+    <big><br style="text-decoration: underline;">
+      <span style="text-decoration: underline;">Additional formats</span><br>
+      <br>
+      You can use additional format if you install a third-party codecs.<br>
+      <br>
+      <span style="text-decoration: underline;">Working with multimedia</span><br>
+      <br>
+      Just use <span style="font-style: italic;">Multimedia</span> class for
+      work with multimedia. Let’s look on public methods.<br>
+      <br>
+      <span style="font-style: italic;">void Multimedia::initialize();</span> –
+      Initialize the multimedia subsystem.<br>
+      <span style="font-style: italic;">void Multimedia::load(const char
+        *target);</span> – Load a multimedia file.<br>
+      <span style="font-style: italic;">void Multimedia::play();</span> – Play a
+      content of the target file.<br>
+      <span style="font-style: italic;">void Multimedia::stop();</span> – Stop
+      playing a content of the target file.<br>
+      <span style="font-style: italic;">bool Multimedia::check_playing();</span>
+      – Return true if the multimedia resource is playing.</big><br>
     <big> </big>
-    <h2><a class="mozTocH2" name="mozTocId236677"></a><big>Chapter 1.
+    <h2><a class="mozTocH2" name="mozTocId236677"></a><big>Chapter 2.
         Interaction with operation system</big></h2>
     <big><br>
       You may need interaction with operation system. Just use <span style="font-style: italic;">System</span>
@@ -813,8 +883,7 @@ C++
       This is all that you must know about this class. It is just very simple
       class for few important things.<br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId688163"></a><a id="mozTocId495779" class="mozTocH2"></a><big>Chapter
-        2. Filesystem</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId688163"></a><big>Chapter 3. Filesystem</big></h2>
     <big><br>
       Filesystem subsystem let you doing some file operation. <span style="font-style: italic;">Filesystem</span>
       class provide simple access to this subsystem. Let’s look to public
@@ -827,7 +896,7 @@ C++
       <span style="font-style: italic;">bool Filesystem::get_status() const;</span>
       – Return false if last file operation was failed.<br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 3. Abnormal
+    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 4. Abnormal
         program termination</big></h2>
     <big><br>
       You can use Halt function for terminate program. This function declared in
@@ -836,7 +905,7 @@ C++
       <span style="font-style: italic;">void BLUEGDK::Halt(const char *message);</span>
       – Terminate the program. Write error message to log file if logging
       enabled. </big><big> </big>
-    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 4. Timer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 5. Timer</big></h2>
     <big><br>
       Timer is very useful thing. Just use <span style="font-style: italic;">Timer</span>
       class for work with the timer. Let’s look to public methods.<br>
@@ -900,11 +969,10 @@ C++
         Collision::generate_box(const unsigned int x,const unsigned int y,const
         unsigned int width,const unsigned int height) const;</span> – Generate
       collision related information from the object properties. </big>
-    <h1><a class="mozTocH1" name="mozTocId590919"></a><a id="mozTocId81465" class="mozTocH1"></a><big>
-        Part 5. Binary files</big></h1>
-    <big> </big>
-    <h2><a class="mozTocH2" name="mozTocId961921"></a><a id="mozTocId402543" class="mozTocH2"></a><big>
-        Chapter 1. Base binary files subsystem</big></h2>
+    <h1><a class="mozTocH1" name="mozTocId590919"></a><big> Part 5. Binary files</big></h1>
+    <big></big> <big> </big>
+    <h2><a class="mozTocH2" name="mozTocId961921"></a><big> Chapter 1. Base
+        binary files subsystem</big></h2>
     <big> <br>
       <u> Work with binary files</u><br>
       <br>
@@ -923,8 +991,8 @@ C++
       <u>Important notice</u><br>
       <br>
       Target file size limit is 2 gigabytes. </big>
-    <h2><a class="mozTocH2" name="mozTocId424835"></a><a id="mozTocId3436" class="mozTocH2"></a><big>
-        Chapter 2. File reader</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId424835"></a><big> Chapter 2. File
+        reader</big></h2>
     <big> <br>
       File reader intend for reading data from a binary files. <i>Input_File</i>
       class provide access to file reader. It is derived from <i>Binary_File</i>
@@ -933,8 +1001,8 @@ C++
       <i> void Input_File::open(const char *name);</i> – Open a file for read.<br>
       <i> void Input_File::read(void *buffer,const size_t length);</i> – Read
       data from the file. </big>
-    <h2><a class="mozTocH2" name="mozTocId511135"></a><a id="mozTocId353425" class="mozTocH2"></a><big>
-        Chapter 3. File writer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId511135"></a><big> Chapter 3. File
+        writer</big></h2>
     <big> <br>
       File writer intend for write data to binary files. <i>Output_File</i>
       class provide access to file reader. It is derived from <i>Binary_File</i>
@@ -1464,96 +1532,6 @@ C++
       <span style="font-style: italic;">GAMEPAD_DIRECTION
         Gamepad::get_stick_y(const GAMEPAD_STICKS stick);</span> – Return
       y-direction of specific stick. </big>
-    <h1><a class="mozTocH1" name="mozTocId897139"></a><big>Part 7. Other
-        important things</big></h1>
-    <big> </big>
-    <h2><a class="mozTocH2" name="mozTocId585261"></a><big>Chapter 1. Memory</big></h2>
-    <big><br>
-      RAM is very important resource. Just use <span style="font-style: italic;">Memory</span>
-      class for get total memory size and free memory size. Let’s look to public
-      methods.<br>
-      <br>
-      <span style="font-style: italic;">unsigned long long int
-        Memory::get_total_physical();</span> – Return total physical memory size
-      in bytes.<br>
-      <span style="font-style: italic;">unsigned long long int
-        Memory::get_free_physical();</span> – Return free physical memory size
-      in bytes.<br>
-      <span style="font-style: italic;">unsigned long long int
-        Memory::get_total_virtual();</span> – Return total <a href="https://en.wikipedia.org/wiki/Virtual_memory">virtual
-        memory</a> size in bytes.<br>
-      <span style="font-style: italic;">unsigned long long int
-        Memory::get_free_virtual();</span> – Return free <a href="https://en.wikipedia.org/wiki/Virtual_memory">virtual
-        memory</a> size in bytes.<br>
-      <span style="font-style: italic;">unsigned long int Memory::get_usage();</span>
-      – Return percentage of physical memory usage. </big>
-    <h2><a class="mozTocH2" name="mozTocId903881"></a><big>Chapter 2. Multimedia</big></h2>
-    <big><br>
-      <span style="text-decoration: underline;">Improve you game</span><br>
-      <br>
-      What is good things for a video games? A sounds and video. The sound can
-      improve game atmosphere. The video is very useful as splash between game
-      levels. It can use for show game story.<br>
-      <br>
-      <span style="text-decoration: underline;">Supported formats</span><br>
-      <br>
-    </big>
-    <p><big> You can see list of supported formats bellow.</big></p>
-    <big><br>
-    </big>
-    <table style="text-align: left; width: 315px; height: 214px;" cellspacing="2"
-      cellpadding="2" border="1">
-      <tbody>
-        <tr>
-          <td style="vertical-align: top;"><big>Format </big></td>
-          <td style="vertical-align: top;"><big>Type </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>WAVE </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG Audio Layer 3 </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>Windows Media Audio </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG–1 </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG–2 </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>Windows Media Video </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-      </tbody>
-    </table>
-    <big><br style="text-decoration: underline;">
-      <span style="text-decoration: underline;">Additional formats</span><br>
-      <br>
-      You can use additional format if you install a third-party codecs.<br>
-      <br>
-      <span style="text-decoration: underline;">Working with multimedia</span><br>
-      <br>
-      Just use <span style="font-style: italic;">Multimedia</span> class for
-      work with multimedia. Let’s look on public methods.<br>
-      <br>
-      <span style="font-style: italic;">void Multimedia::initialize();</span> –
-      Initialize the multimedia subsystem.<br>
-      <span style="font-style: italic;">void Multimedia::load(const char
-        *target);</span> – Load a multimedia file.<br>
-      <span style="font-style: italic;">void Multimedia::play();</span> – Play a
-      content of the target file.<br>
-      <span style="font-style: italic;">void Multimedia::stop();</span> – Stop
-      playing a content of the target file.<br>
-      <span style="font-style: italic;">bool Multimedia::check_playing();</span>
-      – Return true if the multimedia resource is playing. </big>
     <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 8. Internal
         details of the engine subsystems</big></h1>
     <big> </big>
@@ -1588,7 +1566,6 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
-
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1670,6 +1647,7 @@ Multimedia
       1.2.6 – Small bug was fixed.<br>
       1.2.7 – Small changes.<br>
       1.2.8 – Render performance was increased.<br>
+      1.2.9 – Windows 2000 support was added.<br>
     </big> <big> </big>
   </body>
 </html>
