--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1648,6 +1648,7 @@ Multimedia
       1.2.7 – Small changes.<br>
       1.2.8 – Render performance was increased.<br>
       1.2.9 – Windows 2000 support was added.<br>
+      1.3 – Small changes.<br>
     </big> <big> </big>
   </body>
 </html>
