--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -120,7 +120,7 @@
     </ul>
     <big><br>
       Add it to you project. Add this directive to you code: #include
-      "bluegdk.h"<br>
+      "eugenegdk.h"<br>
       Yes. This is really all that you need to do.<br>
       <br>
       <span style="text-decoration: underline;">Feedback</span><br>
@@ -287,7 +287,7 @@ C++
       Go to «Project properties – C/C++ – Precompiled Headers»<br>
       Set «Precomiled Header» option to «Not Using Precompiled Headers»<br>
       Users of modern Visual C++ versions also must uncomment specific code in
-      bluegdk.h file.<br>
+      eugenegdk.h file.<br>
       <br>
       <span style="text-decoration: underline;">Note for MINGW-w64 and TDM-GCC
         users</span><br>
@@ -507,6 +507,7 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
+
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1568,6 +1569,7 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
+
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1655,6 +1657,7 @@ Multimedia
     </big><big> 1.3.2 – Game-pad subsystem was improved.<br>
       1.3.3 – Project name was changed.<br>
       1.3.4 – Sprite subsystem was improved.<br>
-    </big> <big> </big>
+    </big><big> 1.3.5 – Small changes.</big><br>
+    <big> </big>
   </body>
 </html>
