Sprite subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -197,6 +197,7 @@
     <big><br>
     </big>
     <table style="text-align: left; width: 575px; height: 244px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -356,6 +357,7 @@ C++
       Clear the screen. Fill it by black color.<br>
       <span style="font-style: italic;">void Screen::initialize();</span> –
       Initialize the base graphic subsystem.<span style="font-style: italic;"></span><span
+
         style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1662,7 +1664,9 @@ Multimedia
       1.3.3 – Project name was changed.<br>
       1.3.4 – Sprite subsystem was improved.<br>
     </big><big> 1.3.5 – Small changes.<br>
-    </big><big> 1.3.6 – Tile-set subsystem was improved.</big><br>
-    <big> </big>
+    </big><big> 1.3.6 – Tile-set subsystem was improved.<br>
+      1.3.7 – Small changes.<br>
+      1.3.8 – Sprite subsystem was improved.<br>
+    </big> <big> </big>
   </body>
 </html>
