--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -508,6 +508,7 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
+
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1567,6 +1568,7 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
+
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1661,7 +1663,7 @@ Multimedia
       1.3.9 – Tile-set subsystem was improved.<br>
       1.4 – Sprite subsystem was improved.<br>
       1.4.1 – Text subsystem was improved.<br>
-      1.4.2 – Small changes.<br>
+      1.4.2 –&nbsp; 1.4.3 – Small changes.<br>
     </big> <big> </big>
   </body>
 </html>
